devops/kubernetes/install/locust.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: locust
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Service
metadata:
  labels:
    role: locust
  name: locust
  namespace: locust
spec:
  ports:
  - port: 8089
    targetPort: 8089
    name: http-locust
  selector:
    role: locust
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: locust
  name: locust
  namespace: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      role: locust
  template:
    metadata:
      labels:
        role: locust
    spec:
      containers:
      - image: grubykarol/locust:0.8.1-py3.6
        name: locust
        volumeMounts:
          - mountPath: /locust
            name: locust-scripts
        ports:
        - containerPort: 8089
          name: http-locust
          protocol: TCP
      volumes:
      - name: locust-scripts
        configMap:
          name: scripts-cm
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: locust-gateway
  namespace: locust
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http-locust
      protocol: HTTP
    hosts:
    - "locust.workshop.devops.beekeeper.rocks"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: locust
  namespace: locust
spec:
  hosts:
  - "locust.workshop.devops.beekeeper.rocks"
  gateways:
  - locust-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: locust
        port:
          number: 8089

#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: locust
#  namespace: locust
#spec:
#  host: locust
#  subsets:
#  - name: locust
#    labels:
#      role: locust
#  trafficPolicy:
#    tls:
#      mode: DISABLE
